chandeliers-lus/tests/compile_fail/ui/tc/extern/wrong-ty-const.stderr
error[E0308]: mismatched types
 --> tests/fail/ui/tc/extern/wrong-ty-const.rs:3:18
  |
3 |     extern const WRONG_TY: float;
  |                  ^^^^^^^^  ----- expected due to this
  |                  |
  |                  expected `Type<f64>`, found `Type<i64>`
  |
  = note: expected struct `Type<f64>`
             found struct `Type<i64>`
